--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "7-oy-4-dars",
+  "name": "7-oy-todo-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@redux-devtools/extension": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3",
     "redux": "^5.0.1"
   },
   "devDependencies": {
